Rm vertical-align property, add id to popover css rule to fix bug

--- a/src/Components/Results/Programs/Filter.css
+++ b/src/Components/Results/Programs/Filter.css
@@ -46,7 +46,7 @@
   margin-left: 1rem;
 }
 
-.MuiPaper-root.MuiPopover-paper {
+#citizenshipPopover .MuiPaper-root.MuiPopover-paper {
   border-radius: 0 1.5625rem 1.5625rem 1.5625rem;
   width: 21rem;
   border: 1px solid var(--primary-color);
@@ -65,7 +65,6 @@
 }
 
 .MuiFormControlLabel-root.vertical-align {
-  vertical-align: top;
   display: flex;
   align-items: start;
   padding: .5rem;
